# parflow

./: .codespellrc  .gitignore  .hgignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS  CONTRIBUTORS.md  Dockerfile  Dockerfile_CUDA  LICENSE.txt  README  README-CMAKE.md  README-CUDA.md  README-GPU.md  README-OPENMP.md  README-PDI.md  README-SAMRAI.md  README-Spack.md  README-autoconf.md  README.LLNL  README.SAMRAI  README.md  README_ParFlowE  RELEASE-NOTES.md  SPONSORS.md  TODO  VERSION  docker-compose.test.yml  install-cuda.sh  installer.sh  ippisch_implementation_summary.md  metadata.yml  requirements.txt
docs/manuals/: CMakeLists.txt  amps_manual.tex  bib.tex  codeorg.tex  defs.tex  dev_manual.tex  dev_manual_intro.tex  discretize.tex  documentation.tex  files.tex  grid.tex  html.sty  input.tex  intro.tex  manual.bbl.tex  models.tex  newRefs_ParFlowManual.bib  pfsystem.tex  pftools.tex  ref.grid.tex  release_process.md  release_process.tex  start.tex  user_manual.tex  version.tex.in  visualization.tex
examples/: .gitignore  CMakeLists.txt  Makefile  bc.00.out.timing.csv  bc.00.pftcl  bc.00.tcl  clean  cond.out.pfmetadata  cond.out.timing.csv  cond.tcl  default_richards.out.pfmetadata  default_richards.out.timing.csv  default_richards.pftcl  default_richards.tcl  default_single.out.timing.csv  default_single.tcl  example_richards.tcl  example_single.py  example_single.tcl  forsyth2.out.mask.pfb  forsyth2.out.perm_z.pfb  forsyth2.out.pfmetadata  forsyth2.out.press.00000.pfb  forsyth2.out.press.00001.pfb  forsyth2.out.press.00002.pfb  forsyth2.out.satur.00000.pfb  forsyth2.out.satur.00001.pfb  forsyth2.out.satur.00002.pfb  forsyth2.out.specific_storage.pfb  forsyth2.out.timing.csv  forsyth2.out.txt  forsyth2.pfidb  forsyth2.tcl  forsyth5.out.pfmetadata  forsyth5.out.timing.csv  forsyth5.tcl  impes.internalbc.out.timing.csv  impes.internalbc.tcl  impes.plinear.out.timing.csv  impes.plinear.tcl  (+31 more)
examples/correct_output/: bc.00.out.concen.0.00.00020.pfsb  bc.00.out.concen.0.01.00020.pfsb  bc.00.out.press.00020.pfb  cond.out.press.00004.pfb  cond.out.satur.00004.pfb  default_single.out.concen.0.00.00000.pfsb  default_single.out.concen.0.00.00002.pfsb  example_richards.out.perm_x.pfb  example_richards.out.porosity.pfb  example_richards.out.press.00001.pfb  example_richards.out.specific_storage.pfb  example_single.out.concen.0.00.00001.pfsb  example_single.out.concen.0.00.00003.pfsb  example_single.out.concen.0.00.00005.pfsb  example_single.out.press.00000.pfb  forsyth2.out.porosity.pfb  forsyth2.out.press.00003.pfb  forsyth2.out.satur.00003.pfb  forsyth5.out.perm_y.pfb  forsyth5.out.porosity.pfb  forsyth5.out.press.00002.pfb  forsyth5.out.press.00003.pfb  forsyth5.out.press.00004.pfb  forsyth5.out.press.00005.pfb  forsyth5.out.press.00006.pfb  forsyth5.out.satur.00000.pfb  forsyth5.out.satur.00001.pfb  forsyth5.out.satur.00002.pfb  forsyth5.out.satur.00003.pfb  forsyth5.out.satur.00004.pfb  forsyth5.out.satur.00005.pfb  forsyth5.out.satur.00006.pfb  llnl-perm.out.diff.perm.pfb  llnl-perm.out.perm_x.pfb  llnl-perm.out.porosity.pfb  llnl.out.concen.0.00.00100.pfsb  llnl.out.perm_z.pfb  llnl.out.press.00000.pfb  perm.00.out.press.pfb  test_X.out.porosity.pfb  (+22 more)
examples/orig/: default_richards.out.press.00004.pfb  default_richards.out.press.00005.pfb  default_richards.out.satur.00001.pfb  default_richards.out.temp.00001.pfb
flowvr/: CMakeLists.txt  README.md
flowvr/VisIt-connector/: CMakeLists.txt  main.c  starter.sh  visit-connector-starter.sh.in
flowvr/analyzer/: CMakeLists.txt  find_hillslope_K.c  random_pressure_steer.c  test_python_analyzer.py
flowvr/examples/: C-analyzer-template.c  Python-analyzer-template.py
flowvr/filters/: CMakeLists.txt  flowvr.plugins.MergeGridMessages.cpp  flowvr.plugins.MergeItExt.cpp
flowvr/parflowvr/: do.sh  (+9 more)
parflow/: Makefile.in  configure  configure.in  header.c  header.f  header.shell  prepare.win32  prepare.win32.f2c  unprepare.win32  util.py
pfcommon/: CMakeLists.txt  README  messages.c  messages.h  pypfAnalyzer.c  pypfAnalyzer.h  pypfAnalyzer.i  pypfcommon.c  pypfcommon.h  pypfcommon.i
pfnuopc/: CMakeLists.txt  README.md  esmxBuild.yaml
pfsimulator/: CMakeLists.txt  Makefile.in  bootstrap  configure  configure.in  parflow_config.h.in
pftools/: CMakeLists.txt  Makefile.depend  Makefile.in  Makefile.tcllib.mak  README.md  axpy.c  bgmsfem2pfsol.c  compute_domain.c  compute_domain.h  configure  configure.in  databox.c  databox.h  diff.c  diff.h  dirt.tcl  enlargebox.c  enlargebox.h  error.c  error.h  evap.tcl  extractlog  extrap_TIN.c  file.c  file.h  flux.c  flux.h  fsb.tcl  fsbox.tcl  general.h  genfiles.sh  geom_sort_vertices.c  geom_sort_xy_vertices.c  geometry.h  getsubbox.c  getsubbox.h  gms.h  gmsSOL2pfsol.c  gmsTINvertices.c  gmsfem2pfsol.sh  (+93 more)
test/: .gitignore  CMakeLists.txt  FlatICP_Overland.out.pfmetadata  FlatICP_Overland.out.timing.csv  FlatICP_OverlandDif.out.pfmetadata  FlatICP_OverlandDif.out.timing.csv  FlatICP_OverlandKin.out.pfmetadata  FlatICP_OverlandKin.out.timing.csv  Flow_Barrier_X.sa  Flow_Barrier_Y.sa  LW_var_dz.out.pfmetadata  LW_var_dz.out.timing.csv  LW_var_dz.tcl  LW_var_dz_spinup.out.pfmetadata  LW_var_dz_spinup.out.timing.csv  LW_var_dz_spinup.tcl  Makefile  Overland_FlatICP.tcl  Slab.negxnegy.OverlandDif.out.pfmetadata  Slab.negxnegy.OverlandDif.out.timing.csv  Slab.negxnegy.OverlandKin.out.pfmetadata  Slab.negxnegy.OverlandKin.out.timing.csv  Slab.negxnegy.OverlandModule.out.pfmetadata  Slab.negxnegy.OverlandModule.out.timing.csv  Slab.posxposy.OverlandDif.out.pfmetadata  Slab.posxposy.OverlandDif.out.timing.csv  Slab.posxposy.OverlandKin.out.pfmetadata  Slab.posxposy.OverlandKin.out.timing.csv  Slab.posxposy.OverlandModule.out.pfmetadata  Slab.posxposy.OverlandModule.out.timing.csv  TiltedV_Overland.out.pfmetadata  TiltedV_Overland.out.timing.csv  TiltedV_OverlandDif.out.pfmetadata  TiltedV_OverlandDif.out.timing.csv  TiltedV_OverlandKin.out.pfmetadata  TiltedV_OverlandKin.out.timing.csv  chunk_over.tcl  clean  clm.tcl  compare.press.tcl  (+133 more)
(+6337 files in other folders)
